<resources>
    <string name="app_name">Citisfy</string>

    <string name="action_settings">Settings</string>
    <string name="locationProfile">Dry Bar</string>
    <string name="groupName">Group Name</string>
    <string name="cityName">City Name</string>
    <string name="event">Event</string>
    <string name="postContentHint">Beitrag schreiben</string>
    <string name="postCreationMessage_successful">Post erfolgreich erstellt</string>
    <string name="postCreationMessage_failed">Erstellung von Post fehlgeschlagen</string>
    <string name="connectionError">connection error</string>
    <string name="empty">Keine Beiträge vorhanden</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="acc_drawer_open">open</string>
    <string name="acc_drawer_close">close</string>
    <string name="search_location_hint">Suche Location</string>
    <string name="search_tag_hint">Suche Tag</string>
    <string name="search_hint">Suche</string>
    <string name="app_label">City</string>
    <string name="search_menu_title">Search</string>
    <string name="left_tab_locations">Orte</string>
    <string name="left_tab_tags">Tags</string>
    <string name="postDeletionMessage_successful">Post gelöscht</string>
    <string name="postCreationMessage_not_allowed">Unerlaubte Aktion</string>
    <string name="postDeletionMessage_failed">Löschung fehlgeschlagen</string>
    <string name="postDeletionMessage_not_allowed">Unerlaubte Löschung</string>
    <string name="btn_like_description">like button</string>
    <string name="source_icon_description">source icon</string>
    <string name="drawer_left_radio_popular_first_text">populärste zuerst</string>
    <string name="drawer_left_radio_newest_first_text">neueste zuerst</string>
    <string name="action_create">Post erstellen</string>
    <string name="action_create_comment">Kommentar schreiben</string>
    <string name="action_search">Suche</string>
    <string name="action_refresh">Neu laden</string>
    <string name="drawer_left_sort_text">Sortierung:</string>
    <string name="location_open_hours_text">geöffnet:</string>
    <string name="location_open_hours_text_time">unbekannt</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="confirm">Bestätigen</string>
    <string name="cancel">Abbrechen</string>
    <string name="create_post_dialog_title">Post senden</string>
    <string name="action_post">Absenden</string>
    <string name="delete">Löschen</string>
    <string name="edit">Editieren</string>
    <string name="read_comments">Öffne Kommentare</string>
    <string name="open_location">Öffne Locationprofil</string>
    <string name="edit_open_hours">Editiere Öffnungszeiten</string>
    <string name="authenticate">Authentifizieren</string>
    <string name="authentification_success">Authentifikation erfolgreich</string>
    <string name="authentification_missing_input">Bitte geben sie eine Email-Adresse und ein paswort ein</string>
    <string name="password">Passwort</string>
    <string name="email_address">E-Mail-Adresse</string>
    <string name="authentification_incorrect">Inkorrekte E-Mail-Adresse oder Passwort</string>
    <string name="delete_post_dialog_title">Lösche Post</string>
    <string name="edit_description">Editiere Beschreibung</string>
    <string name="location_expand_description">expandButton</string>
</resources>
