<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/context_read_comments"
        android:orderInCategory="1"
        android:enabled="false"
        android:visible="false"
        android:title="@string/read_comments"/>

    <item
        android:id="@+id/context_open_location"
        android:orderInCategory="2"
        android:enabled="false"
        android:visible="false"
        android:title="@string/open_location"/>

    <item
        android:id="@+id/context_edit"
        android:orderInCategory="3"
        android:enabled="false"
        android:visible="false"
        android:title="@string/edit"/>

    <item
        android:id="@+id/context_delete"
        android:orderInCategory="4"
        android:enabled="false"
        android:visible="false"
        android:title="@string/delete"/>

</menu>