<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Create -->
    <item
        android:id="@+id/action_create"
        android:icon="@drawable/kommentar"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:title="@string/action_create"/>
    <item
        android:id="@+id/action_create_comment"
        android:icon="@drawable/kommentar"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        android:title="@string/action_create_comment"/>

    <!-- Refresh -->
    <item
        android:id="@+id/action_refresh"
        app:showAsAction="never"
        android:orderInCategory="90"
        android:title="@string/action_refresh"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
