<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/drawer_left_background_color"
    android:padding="0dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.aix.city.LeftDrawerFragment">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:clipToPadding="false">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/layout_bg">
            <SearchView
                android:id="@+id/drawer_left_searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:queryHint="@string/search_location_hint"
                android:iconifiedByDefault="false" />
        </FrameLayout>

        <!--<ListView
            android:id="@+id/drawer_left_list"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            tools:listitem="@layout/list_item_location" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:paddingTop="6dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/drawer_left_hungrig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_drawer_left"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:paddingEnd="12dp"
                android:paddingRight="12dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:text="Hungrig?"
                android:textColor="@android:color/white"
                android:textSize="@dimen/drawer_left_text_size"
                android:clickable="true"/>

            <TextView
                android:id="@+id/drawer_left_durstig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_drawer_left"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:paddingEnd="12dp"
                android:paddingRight="12dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:text="Durstig?"
                android:textColor="@android:color/white"
                android:textSize="@dimen/drawer_left_text_size"
                android:clickable="true"/>

            <TextView
                android:id="@+id/drawer_left_party"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_drawer_left"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:paddingEnd="12dp"
                android:paddingRight="12dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:text="Party?"
                android:textColor="@android:color/white"
                android:textSize="@dimen/drawer_left_text_size"
                android:clickable="true"/>

            <TextView
                android:id="@+id/drawer_left_alles_andere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_drawer_left"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:paddingEnd="12dp"
                android:paddingRight="12dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:text="Alles Andere"
                android:textColor="@android:color/white"
                android:textSize="@dimen/drawer_left_text_size"
                android:clickable="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/drawer_left_sort_text"
                android:textSize="@dimen/drawer_left_text_size"
                android:textColor="@android:color/white"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:gravity="start"
                android:orientation="vertical">
                <RadioButton android:id="@+id/drawer_left_radio_newest_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:buttonTint="@android:color/white"
                    android:text="@string/drawer_left_radio_newest_first_text"
                    android:textColor="@android:color/white"/>
                <RadioButton android:id="@+id/drawer_left_radio_popular_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:buttonTint="@android:color/white"
                    android:text="@string/drawer_left_radio_popular_first_text"
                    android:textColor="@android:color/white"/>
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
